# waypointeditor

./: .gitignore  README.md  buildapp.sh  builddmg.sh  pyproject.toml
src/: waypointeditor.py
